--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@types/react-dom": "^17.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
     "react-scripts": "4.0.3",
+    "save-dev": "0.0.1-security",
     "typescript": "^4.2.3",
+    "typescript-plugin-css-modules": "^3.2.0",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
